Se actualiza la versión del proyecto a la 4.0.4

--- a/mapea-parent/pom.xml
+++ b/mapea-parent/pom.xml
@@ -3,12 +3,12 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>es.juntadeandalucia.mapea</groupId>
    <artifactId>mapea-parent</artifactId>
-   <version>4.0.3</version>
+   <version>4.0.4</version>
    <packaging>pom</packaging>
    <name>Mapea 4 PARENT</name>
    <description>Herramienta para desarrollo de mapas interactivos de forma sencilla</description>
    <properties>
-      <project.release.date>28/12/2016</project.release.date>
+      <project.release.date>13/03/2017</project.release.date>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <build.timestamp>${maven.build.timestamp}</build.timestamp>
       <maven.build.timestamp.format>dd-MM-yyyy</maven.build.timestamp.format>
@@ -32,9 +32,27 @@
    </developers>
    <profiles>
       <profile>
-         <id>mapea-produccion</id>
+         <id>mapea-local</id>
+         <activation>
+            <activeByDefault>false</activeByDefault>
+         </activation>
+         <properties>
+            <environment>mapea-local</environment>
+         </properties>
+      </profile>
+      <profile>
+         <id>mapea-desarrollo</id>
          <activation>
             <activeByDefault>true</activeByDefault>
+         </activation>
+         <properties>
+            <environment>mapea-desarrollo</environment>
+         </properties>
+      </profile>
+      <profile>
+         <id>mapea-produccion</id>
+         <activation>
+            <activeByDefault>false</activeByDefault>
          </activation>
          <properties>
             <environment>mapea-produccion</environment>
@@ -56,6 +74,15 @@
          </activation>
          <properties>
             <environment>mapea-preproduccion</environment>
+         </properties>
+      </profile>
+      <profile>
+         <id>mapea-amazon</id>
+         <activation>
+            <activeByDefault>false</activeByDefault>
+         </activation>
+         <properties>
+            <environment>mapea-amazon</environment>
          </properties>
       </profile>
    </profiles>
