--- a/mapea-js/package.json
+++ b/mapea-js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mapea",
-    "version": "4.0.3",
+    "version": "4.0.4",
     "description": "Herramienta para desarrollo de mapas interactivos de forma sencilla",
     "keywords": [
         "map",
@@ -18,9 +18,9 @@
         "url": "https://github.com/sigcorporativo-ja/mapeaJS/issues"
     },
     "devDependencies": {
-        "async": "^1.4.2",
-        "browserify": "^12.0.1",
-        "derequire": "^2.0.3",
+        "async": "2.1.4",
+        "browserify": "14.0.0",
+        "derequire": "2.0.6",
         "grunt": "^0.4.5",
         "grunt-bower-task": "^0.4.0",
         "grunt-cli": "^0.1.13",
@@ -37,14 +37,14 @@
         "uglify-js": "^2.6.1"
     },
     "dependencies": {
-        "closure-util": "1.13.1",
-        "fs-extra": "^0.22.1",
-        "jsdoc": "^3.3.2",
+        "closure-util": "1.17.0",
+        "fs-extra": "2.0.0",
+        "jsdoc": "3.4.3",
         "mocha-phantomjs": "^3.6.0",
         "phantomjs": "1.9.7-15",
         "promise": "^7.0.3",
-        "temp": "^0.8.3",
-        "walk": "^2.3.9",
+        "temp": "0.8.3",
+        "walk": "2.3.9",
         "yuicompressor": "^2.4.8"
     }
 }
