Se modifica la configuración del jshint para la compatibilidad con la versión de ol implementada (4.0.1)

--- a/mapea-js/.jshintrc
+++ b/mapea-js/.jshintrc
@@ -1,19 +1,20 @@
 {
-   "sub": true,
-   "loopfunc": true,
-   "esversion": 6,
-   "undef": true,
-   "unused": "vars",
-   "globals": {
-      "M": true
-   },
-   "predef": [
-      "goog",
-      "ol",
-      "L",
-      "Handlebars",
-      "proj4",
-      "ActiveXObject"
-   ],
-   "browser": true
+    "sub": true,
+    "loopfunc": true,
+    "esversion": 6,
+    "undef": true,
+    "unused": "vars",
+    "globals": {
+        "M": true
+    },
+    "predef": [
+        "goog",
+        "ol",
+        "L",
+        "Handlebars",
+        "proj4",
+        "ActiveXObject"
+    ],
+    "browser": true,
+    "devel": true
 }
